<resources>
    <string name="app_name" translatable="false">SystemFood</string>
    <string name="login" translatable="false">Login</string>
    <string name="senha">Senha</string>
    <string name="salvar">Salvar</string>
    <string name="tipo_usuario">Tipo de Usuário:</string>
    <string name="administrador">Administrador</string>
    <string name="usuario">Usuário</string>
    <string name="nomeCliente">Nome</string>
    <string name="cpfCliente">CPF</string>
    <string name="entrar">Entrar</string>
    <string name="menu" translatable="false">MENU</string>
    <string name="clube_desconto">Clube de Desconto</string>
    <string name="pedidos_andamento">Pedidos em Andamento</string>
    <string name="realizar_pedido">Realizar Pedido</string>
    <string name="cadastrar_usuario">Cadastrar Usuário</string>
    <string name="quantDesc">Quantidade de Compras</string>
    <string name="pedidos">PEDIDOS</string>
    <string name="mesas">MESAS</string>
    <string name="mesa1">Mesa 1</string>
    <string name="mesa2">Mesa 2</string>
    <string name="mesa3">Mesa 3</string>
    <string name="mesa4">Mesa 4</string>
    <string name="mesa5">Mesa 5</string>
    <string name="mesa6">Mesa 6</string>
    <string name="itensAndamento">ITENS DO PEDIDO</string>
    <string name="totalComDesconto">TOTAL C/ DESCONTO</string>
    <string name="totalSemDesconto" translatable="false">TOTAL</string>
    <string name="desenvolvidoPor">Desenvolvido por:</string>
    <string name="sobre">Sobre</string>
</resources>