<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MesasActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotipo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMesa6"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/bg_button_login"
        android:onClick="mesaSeis"
        android:text="@string/mesa6"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/btnMesa5"
        app:layout_constraintTop_toBottomOf="@+id/btnMesa4"
        app:layout_constraintVertical_bias="0.048"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMesa5"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/bg_button_login"
        android:onClick="mesaCinco"
        android:text="@string/mesa5"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMesa3"
        app:layout_constraintVertical_bias="0.049" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMesa3"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button_login"
        android:onClick="mesaTres"
        android:text="@string/mesa3"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMesa1" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMesa4"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_button_login"
        android:onClick="mesaQuatro"
        android:text="@string/mesa4"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMesa3"
        app:layout_constraintTop_toBottomOf="@+id/btnMesa2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/mesas"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMesa1"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_button_login"
        android:onClick="mesaUm"
        android:text="@string/mesa1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMesa2"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_button_login"
        android:onClick="mesaDois"
        android:text="@string/mesa2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMesa3"
        app:layout_constraintTop_toTopOf="@+id/btnMesa1" />

</androidx.constraintlayout.widget.ConstraintLayout>